@@ -129,27 +129,6 @@
 	</tr>
 	<tr bgcolor="#dababa">
 		<td nowrap>
-						1520966
-		</td>
-		<td>
-			<a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1520966&amp;group_id=599&amp;atid=100599">
-				PIC16 floating-point multiply bug (small numbers)
-			</a>
-		</td>
-		<td>
-							&nbsp;
-						2006-07-11 22:49
-		</td>
-		<td align="center">
-			5
-		</td>
-
-
-		<td>nobody</td>
-		<td>markrages</td>
-	</tr>
-	<tr bgcolor="#dababa">
-		<td nowrap>
 						1520949
 		</td>
 		<td>
